--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,10 @@ body {
 	box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
 }
 
+.new-todo :disabled {
+	color: indianred;
+}
+
 .edit-todo {
 	position: relative;
 	margin: 0;
@@ -435,4 +439,22 @@ meta,
 [property="todo"] .view:focus-within .toggle,
 [property="todo"] .view:focus-within button {
 	display: none !important;
+}
+
+/* +++ */
+
+.error, .postError, .loading {
+	background-color: indianred;
+	color: white;
+	text-align: center;
+	padding: 16px 0px;
+	width: 100%;
+	font-size: 1.4em;
+	line-height: 1.4em;
+	text-transform: uppercase;
+	border: none
+}
+.loading {
+	background-color: transparent;
+	color: indianred;
 }
