--- a/src/style.css
+++ b/src/style.css
@@ -47,7 +47,7 @@ body {
 	margin: 130px 0 40px 0;
 	position: relative;
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
-	            0 25px 50px 0 rgba(0, 0, 0, 0.1);
+		0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
 .todoapp input::-webkit-input-placeholder {
@@ -103,7 +103,7 @@ body {
 	padding: 16px 16px 16px 60px;
 	border: none;
 	background: rgba(0, 0, 0, 0.003);
-	box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
+	box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
 }
 
 .new-todo :disabled {
@@ -136,14 +136,15 @@ body {
 .toggle-all {
 	width: 1px;
 	height: 1px;
-	border: none; /* Mobile Safari */
+	border: none;
+	/* Mobile Safari */
 	opacity: 0;
 	position: absolute;
 	right: 100%;
 	bottom: 100%;
 }
 
-.toggle-all + label {
+.toggle-all+label {
 	width: 60px;
 	height: 34px;
 	font-size: 0;
@@ -151,14 +152,14 @@ body {
 	top: -42px;
 }
 
-.toggle-all + label:before {
+.toggle-all+label:before {
 	content: '✔';
 	font-size: 22px;
 	color: #e6e6e6;
 	padding: 10px 27px 10px 14px;
 }
 
-.toggle-all:checked + label:before {
+.toggle-all:checked+label:before {
 	color: #737373;
 }
 
@@ -203,7 +204,8 @@ body {
 	top: 0;
 	bottom: 0;
 	margin: auto 0;
-	border: none; /* Mobile Safari */
+	border: none;
+	/* Mobile Safari */
 	-webkit-appearance: none;
 	appearance: none;
 }
@@ -212,7 +214,7 @@ body {
 	opacity: 0;
 }
 
-.todo-list li .toggle + label {
+.todo-list li .toggle+label {
 	/*
 		Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
 		IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
@@ -222,7 +224,7 @@ body {
 	background-position: center left;
 }
 
-.todo-list li .toggle:checked + label {
+.todo-list li .toggle:checked+label {
 	background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
@@ -291,10 +293,10 @@ body {
 	height: 50px;
 	overflow: hidden;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
-	            0 8px 0 -3px #f6f6f6,
-	            0 9px 1px -3px rgba(0, 0, 0, 0.2),
-	            0 16px 0 -6px #f6f6f6,
-	            0 17px 2px -6px rgba(0, 0, 0, 0.2);
+		0 8px 0 -3px #f6f6f6,
+		0 9px 1px -3px rgba(0, 0, 0, 0.2),
+		0 16px 0 -6px #f6f6f6,
+		0 17px 2px -6px rgba(0, 0, 0, 0.2);
 }
 
 .todo-count {
@@ -326,7 +328,8 @@ body {
 	text-decoration: none;
 	border: 1px solid transparent;
 	border-radius: 3px;
-	cursor: pointer; /* Because of Mavo: we don't use the href attribute in such situations */
+	cursor: pointer;
+	/* Because of Mavo: we don't use the href attribute in such situations */
 }
 
 .filters li a:hover {
@@ -377,6 +380,7 @@ html .clear-completed:active {
 	Can't use it globally since it destroys checkboxes in Firefox
 */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
+
 	.toggle-all,
 	.todo-list li .toggle {
 		background: none;
@@ -427,7 +431,7 @@ html .clear-completed:active {
 	width: calc(100% - 78px) !important;
 	padding: 14px 16px !important;
 	margin: 0 0 0 43px !important;
-	border: 1px solid #999 !important; 
+	border: 1px solid #999 !important;
 	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2) !important;
 }
 
@@ -442,7 +446,9 @@ meta,
 
 /* +++ */
 
-.error, .postError, .loading {
+.error,
+.postError,
+.loading {
 	background-color: indianred;
 	color: white;
 	text-align: center;
@@ -453,6 +459,7 @@ meta,
 	text-transform: uppercase;
 	border: none
 }
+
 .loading {
 	background-color: transparent;
 	color: indianred;
